# Self_Healing_MultiAgent_Code_Assistant

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  Dockerfile.prod  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  tracing.py
backend/app/agents/: __init__.py
backend/app/api/v1/: health.py
backend/app/core/: __init__.py  exceptions.py  gemini_client.py  logger.py  security.py
backend/app/websocket/: __init__.py
backend/tests/: conftest.py  test_health.py
frontend/: Dockerfile  Dockerfile.prod  next-env.d.ts  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/store/: agentStore.ts
infra/aws/: ec2-setup.sh  nginx.conf
